data/derived/comb/progs/unify/prog5587.ml.out
Characters 17-21:
  let _ = abs_float(-3);;
                   ^^^^
Error: This expression has type int but an expression was expected of type
         float
